Hotfix: Fixed vertical alignment in number button

--- a/src/components/Buttons/NumberButton/NumberButton.module.css
+++ b/src/components/Buttons/NumberButton/NumberButton.module.css
@@ -2,7 +2,6 @@
 	position: relative;
 	width: 32px;
 	height: 32px;
-	padding-top: 4px;
 
 	background: none;
 	border-radius: 16px;
